# Matrix

./: .clang-format  .gitignore  CMakeLists.txt  Matrix.pro  README.md
Example/: CMakeLists.txt  examplemain.cpp  utilites.cpp  utilities.cpp
MatrixLib/: CMakeLists.txt  MatrixLib.pro  errorhandling.h  iteratorutils.h  matrix.cpp  matrix.h  matrix_exceptions.h  matrix_template_specializations.h  matrixlib_global.h
MatrixLib/Iterators/: matrix_diterator_impl.cpp  matrix_miterator_impl.cpp  matrix_niterator_impl.cpp  matrix_ziterator_impl.cpp
MatrixLib/Matrix/: matrix.cpp  matrix.h  matrix_header.cpp  matrix_impl.cpp  matrix_template_specializations.h  matrixdimensions.h
MatrixLib/Utils/: errorhandling.cpp  errorhandling.h  iteratordeclarations.h  iteratordefinitions.h  iteratorgetters.h  iteratorutils.h
MatrixTests/: CMakeLists.txt  MatrixTests.pro  tst_matrixtest.cpp
MatrixTests/CommonTests/: CMakeLists.txt  CommonTests.pro  tst_capacitytests.cpp  tst_capacitytests.h  tst_combinedtests.cpp  tst_commontests.cpp  tst_constructionandassignmenttests.cpp  tst_constructionandassignmenttests.h  tst_functionalitytests.cpp  tst_otherfunctionalitytests.cpp  tst_otherfunctionalitytests.h  tst_resizingtests.cpp  tst_resizingtests.h  tst_resizingtests_data.cpp  tst_resizingtests_data.h  tst_swappingtests.cpp  tst_swappingtests.h  tst_swappingtests_data.cpp  tst_swappingtests_data.h  tst_transformationtests.cpp  tst_transformationtests.h  tst_transformationtests_data.cpp  tst_transformationtests_data.h
MatrixTests/CommonTests/CapacityTests/: CMakeLists.txt  tst_basiccapacitytests.h  tst_basicintmatrixcapacitytests.cpp  tst_basicstringmatrixcapacitytests.cpp  tst_capacitytests.h  tst_combinedcapacitytests.h  tst_combinedintmatrixcapacitytests.cpp  tst_combinedstringmatrixcapacitytests.cpp  tst_intmatrixcapacitytests.cpp  tst_stringmatrixcapacitytests.cpp
MatrixTests/ExceptionTests/: CMakeLists.txt  ExceptionTests.pro  tst_commonexceptiontests.cpp  tst_exceptiontests.cpp  tst_iteratorexceptiontests.cpp
MatrixTests/IteratorTests/: CMakeLists.txt  IteratorTests.pro  tst_constditeratortests.cpp  tst_constmiteratortests.cpp  tst_constniteratortests.cpp  tst_constreversediteratortests.cpp  tst_constreversemiteratortests.cpp  tst_constreverseniteratortests.cpp  tst_constreverseziteratortests.cpp  tst_constziteratortests.cpp  tst_diteratortests.cpp  tst_miteratortests.cpp  tst_niteratortests.cpp  tst_reversediteratortests.cpp  tst_reversemiteratortests.cpp  tst_reverseniteratortests.cpp  tst_reverseziteratortests.cpp  tst_wditeratortests.cpp  tst_ziteratortests.cpp
MatrixTests/IteratorTests/ConstDIteratorTests/: ConstDIteratorTests.pro  tst_constditeratortests.cpp
MatrixTests/IteratorTests/ConstMIteratorTests/: ConstMIteratorTests.pro  tst_constmiteratortests.cpp
MatrixTests/IteratorTests/ConstNIteratorTests/: ConstNIteratorTests.pro  tst_constniteratortests.cpp
MatrixTests/IteratorTests/ConstReverseDIteratorTests/: ConstReverseDIteratorTests.pro  tst_constreversediteratortests.cpp
MatrixTests/IteratorTests/ConstReverseMIteratorTests/: ConstReverseMIteratorTests.pro  tst_constreversemiteratortests.cpp
MatrixTests/IteratorTests/ConstReverseNIteratorTests/: ConstReverseNIteratorTests.pro  tst_constreverseniteratortests.cpp
MatrixTests/IteratorTests/ConstReverseZIteratorTests/: ConstReverseZIteratorTests.pro  tst_constreverseziteratortests.cpp
MatrixTests/IteratorTests/ConstZIteratorTests/: ConstZIteratorTests.pro  tst_constziteratortests.cpp
MatrixTests/IteratorTests/DIteratorTests/: DIteratorTests.pro  tst_diteratortests.cpp
MatrixTests/IteratorTests/MIteratorTests/: MIteratorTests.pro  tst_miteratortests.cpp
MatrixTests/IteratorTests/NIteratorTests/: NIteratorTests.pro  tst_niteratortests.cpp
MatrixTests/IteratorTests/ReverseDIteratorTests/: ReverseDIteratorTests.pro  tst_reversediteratortests.cpp
MatrixTests/IteratorTests/ReverseMIteratorTests/: ReverseMIteratorTests.pro  tst_reversemiteratortests.cpp
MatrixTests/IteratorTests/ReverseNIteratorTests/: ReverseNIteratorTests.pro  tst_reverseniteratortests.cpp
MatrixTests/IteratorTests/ReverseZIteratorTests/: ReverseZIteratorTests.pro  tst_reverseziteratortests.cpp
MatrixTests/IteratorTests/ZIteratorTests/: ZIteratorTests.pro  tst_ziteratortest.cpp  tst_ziteratortests.cpp
MatrixTests/OtherMatrixTypesTests/: CMakeLists.txt  tst_decimalmatrixtests.cpp  tst_fractionmatrixtests.cpp  tst_qpointfmatrixtests.cpp  tst_stringmatrixtests.cpp
MatrixTests/Shared/: testconstants.h  testenums.h  testutils.h
MatrixTests/TypeDependentTests/: CMakeLists.txt  TypeDependentTests.pro  tst_decimalmatrixtests.cpp  tst_fractionmatrixtests.cpp  tst_intmatrixtests.cpp  tst_qpointfmatrixtests.cpp  tst_stringmatrixtests.cpp
MatrixTests/TypeDependentTests/DecimalMatrixTests/: DecimalMatrixTests.pro  tst_decimalmatrixtests.cpp
MatrixTests/TypeDependentTests/FractionMatrixTests/: FractionMatrixTests.pro  tst_fractionmatrixtests.cpp
MatrixTests/TypeDependentTests/IntMatrixTests/: IntMatrixTests.pro  tst_intmatrixtests.cpp
MatrixTests/TypeDependentTests/QPointFMatrixTests/: QPointFMatrixTests.pro  tst_qpointfmatrixtests.cpp
MatrixTests/TypeDependentTests/StringMatrixTests/: StringMatrixTests.pro  tst_stringmatrixtests.cpp
TestUtilsLib/: CMakeLists.txt  testconstants.cpp  testmacros.h
