cmake_minimum_required(VERSION 3.5)

project(IteratorTests LANGUAGES CXX)

find_package(QT NAMES Qt5 Qt6 COMPONENTS Test REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test REQUIRED)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

enable_testing()

include_directories(../../MatrixLib/Matrix)

add_executable(ZIteratorTests tst_ziteratortests.cpp)
add_executable(ConstZIteratorTests tst_constziteratortests.cpp)
add_executable(ReverseZIteratorTests tst_reverseziteratortests.cpp)
add_executable(ConstReverseZIteratorTests tst_constreverseziteratortests.cpp)
add_executable(NIteratorTests tst_niteratortests.cpp)
add_executable(ConstNIteratorTests tst_constniteratortests.cpp)
add_executable(ReverseNIteratorTests tst_reverseniteratortests.cpp)
add_executable(ConstReverseNIteratorTests tst_constreverseniteratortests.cpp)
add_executable(DIteratorTests tst_diteratortests.cpp)
add_executable(ConstDIteratorTests tst_constditeratortests.cpp)
add_executable(ReverseDIteratorTests tst_reversediteratortests.cpp)
add_executable(ConstReverseDIteratorTests tst_constreversediteratortests.cpp)
add_executable(MIteratorTests tst_miteratortests.cpp)
add_executable(ConstMIteratorTests tst_constmiteratortests.cpp)
add_executable(ReverseMIteratorTests tst_reversemiteratortests.cpp)
add_executable(ConstReverseMIteratorTests tst_constreversemiteratortests.cpp)

add_test(NAME ZIteratorTests COMMAND ZIteratorTests)
add_test(NAME ConstZIteratorTests COMMAND ConstZIteratorTests)
add_test(NAME ReverseZIteratorTests COMMAND ReverseZIteratorTests)
add_test(NAME ConstReverseZIteratorTests COMMAND ConstReverseZIteratorTests)
add_test(NAME NIteratorTests COMMAND NIteratorTests)
add_test(NAME ConstNIteratorTests COMMAND ConstNIteratorTests)
add_test(NAME ReverseNIteratorTests COMMAND ReverseNIteratorTests)
add_test(NAME ConstReverseNIteratorTests COMMAND ConstReverseNIteratorTests)
add_test(NAME DIteratorTests COMMAND DIteratorTests)
add_test(NAME ConstDIteratorTests COMMAND ConstDIteratorTests)
add_test(NAME ReverseDIteratorTests COMMAND ReverseDIteratorTests)
add_test(NAME ConstReverseDIteratorTests COMMAND ConstReverseDIteratorTests)
add_test(NAME MIteratorTests COMMAND MIteratorTests)
add_test(NAME ConstMIteratorTests COMMAND ConstMIteratorTests)
add_test(NAME ReverseMIteratorTests COMMAND ReverseMIteratorTests)
add_test(NAME ConstReverseMIteratorTests COMMAND ConstReverseMIteratorTests)

target_link_libraries(ZIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstZIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ReverseZIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstReverseZIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(NIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstNIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ReverseNIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstReverseNIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(DIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstDIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ReverseDIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstReverseDIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(MIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstMIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ReverseMIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)
target_link_libraries(ConstReverseMIteratorTests PRIVATE Qt${QT_VERSION_MAJOR}::Test)

